2008-04-08  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.8): Fixed ordering of vwait and after
	cancel. cancel has to be done after the vwait completes.

2008-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* tests/chanio.test (chan-io-53.8,53.9,53.10):	fix typo & quoting for
	* tests/io.test (io-53.8,53.9,53.10):		spaces in builddir path

2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* tests/chanio.test:
	* generic/tclIO.c: Additional changes to data structures for fcopy
	* generic/tclIO.h: and channels to perform proper cleanup in case
	of a channel having two background copy operations running as is
	now possible.

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* generic/tclIO.c: Additional changes to data structures for fcopy
	and channels to perform proper cleanup in case of a channel having
	two background copy operations running as is now possible.

2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (BUSY_STATE, CheckChannelErrors,
	TclCopyChannel): New macro, and the places using it. This change
	allows for bi-directional fcopy on channels. [Bug 1350564]. Thanks
	to Alexandre Ferrieux <ferrieux@users.sourceforge.net> for the
	patch.

2008-04-07  Reinhard Max  <max@suse.de>

	* generic/tclStringObj.c (Tcl_AppendFormatToObj): Fix [format {% d}]
	so that it behaves the same way as in 8.4 and as C's printf().
	* tests/format.test: Add a test for '% d' and '%+d'.

2008-04-05  Kevin B. Kenny  <kennykb@acm.org>

	* tests/chanio.test (chan-io-53.9):
	* tests/io.test (io-53.9): Made test cleanup robust against
	the possibility of slow process shutdown on Windows.

	* win/tcl.m4: Added -D_CRT_SECURE_NO_DEPRECATE and 
	-DCRT_NONSTDC_NO_DEPRECATE to the MSVC compilation flags
	so that the compilation doesn't barf on perfectly reasonable
	Posix system calls.
	* win/configure: Manually patched (don't have the right autoconf